--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ a.btn:hover,
 <!--<![endif]-->
 
 
-<div id="as-menu" class="menu-wrapper">
+<div id="as-menu" class="menu-wrapper" style="position:absolute;">
 	
     <ul class="as-menu  as-js-enabled as-shadow">
     
@@ -386,6 +386,8 @@ a.btn:hover,
 	
 	
 	<li class="item-117 "><a href="http://wellshaped.ru/pages/88.htm">Контакты</a></li>
+
+        <li class="item-117 "><a href="http://wellshaped.ru/pages/88.htm">Подарочный сертификат</a></li>
 	
 	
 	
